# aiot_2024_robot

./: README.md  bashrc.txt
OpenCV/cppTest/: CMakeLists.txt  arucoMaker.cpp  bilateral.cpp  canny.cpp  color.cpp  colorInrange.cpp  corner.cpp  dnnmnist.cpp  drawLine.cpp  drawPoly.cpp  drawText.cpp  facecascade.cpp  fiterEmbossing.cpp  gaussianBlur.cpp  helloOpenCV.cpp  histoEqualization.cpp  hog.cpp  hough.cpp  houghlineP.cpp  keypointMatching.cpp  knn.cpp  logical.cpp  main  mainclass.cpp  makefile  matOp2.cpp  mouse.cpp  perspectiveTransform.cpp  qrcode.cpp  saturated.cpp  splitMerge.cpp  threshold.cpp  vecOp.cpp  videoCaption.cpp  warpaffine.cpp
artificial_intelligence/: a01_numpy.py  a02_boolindex.py  a02_broadcasting.py  a03_Dot.py  a04_fancyindexing.py  a05_pandas.py  a06_dataframe  a07_liear_regrex.py  a08_logistic_regrex.py
python/: a01_keyword.py  a02_nametest.py  a03_variable_name.py  a04_operator_overiding.py  a05_print_test.py  a06_data_type.py  a07_str_indexing.py  a08_lenth_test.py  a09_int_float.py  a10_variable_defintion.py  a11_operator2.py  a12_input_test.py  a13_str_format.py  a14_string_method.py  a15_booleen.py  a16_find_method.py  a17_condtion_if.py  a18_datetime.py  a19_summer.py  a20_odd.py  a21_score_print.py  a22_number_aralysis.py  a23_list_test.py  a24_list_test2.py  a25_range_for.py  a26_dictionary_test.py  a27_dictionary_test2.py  a28_dictionary_test3.py  a29_while_test.py  a30_list_function.py  a31_enumerate.py  a32_function_test1.py  a33_function_test2.py  a34_exception.py  a35_module_test.py  a36_class_dic.py  a37_class_makedic.py  (+19 more)
(+161 files in other folders)
